# graph-v2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Notes.md  README.md  ToDo.md
.github/workflows/: cache-cleanup.yml  clang-format.yml  codeql-analysis.yml  coverage.yml  macos.yml  pages.yml  ubuntu.yml  windows.yml
agents/: agent_reference.md  baseline_test_results.txt  concept_inventory.txt  cpo_inventory.txt  dependency_map.txt  ns_refactor_goal.md  ns_refactor_plan.md  ns_refactor_strategy.md  overview.md  phase0_summary.txt  phase1_summary.txt  task_1_1_summary.txt  task_2_2_summary.txt
benchmark/: CMakeLists.txt  graph_bench.cpp  mm_bench_dijkstra.cpp  mm_files.cpp  mm_files.hpp  mm_load.hpp  mm_load_example.cpp  mm_simple.cpp  nwgraph_dijkstra.hpp  sort_matrix_market.cpp  timer.cpp  timer.hpp  util.hpp
cmake/: CSVParser.cmake  CompilerWarnings.cmake  Conan.cmake  FetchBoost.cmake  FetchCSVParser.cmake  FetchCatch.cmake  FetchDocopt.cmake  FetchFMT.cmake  FetchFastMM.cmake  FetchRange.cmake  FetchSPDLog.cmake
data/: bktest1.mtx  bktest2.mtx  cc_directed.csv  cc_undirected.csv  germany_routes.csv  tc_test.csv
doc/: D1709r3.tex  Identifiers.docx  P1709R3.bib  P1709R3.tex  P1709R3.tex.orig  README.md  algorithms.md  customization_points.md  germany_routes_directed.gv.tif  germany_routes_undirected.gv.tif  graph.bib  graph.tex  notes.txt  overview.md  utilities.md  views.md  white_germany_routes_undirected.gv.tif
doc/latex/: D1709R4.tex  D1709r3.tex  P1709R4.bib  germany_routes_bidir.tif  germany_routes_dfs.gv.tif  latexmkrc  notes.txt  white_germany_routes_directed.gv.tif
doc/reference/: algorithms.md  customization_points.md  utilities.md  views.md  visitors.md
doc/sphinx/: conf.py  requirements.txt
doc/sphinx/_templates/: layout.html
doc/tutorial/: algorithms.md  graph_container_interface.md  tutorial_other.md
docs/sphinx/: conf.py  graph-v2-api.rst  index.rst  requirements.txt
example/: CMakeLists.txt
example/AdaptingThirdPartyGraph/: CMakeLists.txt  adapting_a_third_party_graph.cpp
example/CppCon2021/: CMakeLists.txt
example/CppCon2021/examples/: CMakeLists.txt  bacon.cpp  graphs.cpp  imdb.cpp  ospf.cpp
example/CppCon2021/graphs/: imdb-graph.hpp  ospf-graph.hpp  spice-graph.hpp
example/CppCon2021/include/: bfs.hpp  bfs_edge_range.hpp  dijkstra.hpp  graph_concepts.hpp  utilities.hpp
example/CppCon2022/: CMakeLists.txt  germany_routes_example.cpp  graphviz_output.hpp  rr_adaptor.hpp  ~$cppcon22.pptx
example/PageRank/: pagerank.hpp  pagerank_tests.cpp
example/bgl_book/: CMakeLists.txt  ch3_toposort.cpp  ch4_kevin_bacon.cpp  ch4_loop_detection.cpp  ch5_bellman_ford.cpp  ch5_dijkstra.cpp  ch6_kruskal.cpp  ch6_prim.cpp  ch7_connected.cpp  ch7_strongly_connected.cpp  ch8_maxflow.cpp  ch9_knights_tour.cpp  makefile-dependencies.mmio
example/cppcon21/examples/: ospf.cpp
example/cppcon21/graphs/: karate-graph.hpp
example/cppcon21/include/: bfs.hpp
g/: CMakeLists.txt  g.cpp  g.h
include/graph/: edgelist.hpp  graph.hpp  graph_descriptors.hpp  graph_info.hpp  graph_utility.hpp
include/graph/adaptor/: vertices_view.hpp
include/graph/algorithm/: bellman_ford_shortest_paths.hpp  breadth_first_search.hpp  co_bfs.hpp  co_cmn.hpp  co_dijkstra.hpp  co_dijstra.hpp  co_dijstra_clrs.hpp  common_shortest_paths.hpp  connected_components.hpp  depth_first_search.hpp  dijkstra_book.hpp  dijkstra_clrs.hpp  dijkstra_shortest_paths.hpp  kruskal.hpp  mis.hpp  mst.hpp  pagerank.hpp  shortest_paths.hpp  tc.hpp  topological_sort.hpp  transitive_closure.hpp
include/graph/container/: compressed_graph.hpp  container_utility.hpp  csr_adjacency.hpp  csr_graph.hpp  dynamic_graph.hpp  partite_graph.hpp  utility_edgelist.hpp  vol.hpp  vol_graph.hpp
include/graph/detail/: co_generator.hpp  descriptor.hpp  descriptor_old.hpp  descriptor_old2.hpp  graph_access.hpp  graph_cpo.hpp  graph_descriptor.hpp  graph_identifier.hpp  graph_using.hpp  tag_invoke.hpp
include/graph/view/: adjacency_edge_view.hpp  edge_view.hpp  incidence_edge_view.hpp  vertices_view.hpp
include/graph/views/: adjacency_view.hpp  breadth_first_search.hpp  co_bfs.hpp  co_dfs.hpp  depth_first_search.hpp  descriptor.hpp  edgelist.hpp  edgelist_view.hpp  incidence.hpp  incidence_view.hpp  neighbors.hpp  vertexlist.hpp  vertexlist_view.hpp  views_utility.hpp
scripts/: format.sh
test/: CMakeLists.txt  bfs_tests.cpp  catch_main.cpp  constexpr_tests.cpp  csv_csr_routes.hpp  csv_parser.hpp  csv_routes.cpp  csv_routes.hpp  csv_routes_csr_tests.cpp  csv_routes_dov_tests.cpp  csv_routes_tests.cpp  csv_routes_vofl_tests.cpp  csv_routes_vol.hpp  csv_tests.cpp  csv_vol_routes.hpp  dfs_tests.cpp  edgelist_tests.cpp  example_routes.gv  examples.cpp  germany_routes.gv  germany_routes_example.cpp  incidence_tests.cpp  kruskal_tests.cpp  mis_tests.cpp  mst_tests.cpp  neighbors_tests.cpp  pagerank.cpp  pagerank_tests.cpp  shortest_paths_tests.cpp  sourced_incidence_tests.cpp  sourced_neighbors.tests.cpp  tests.cpp  transitive_closure_tests.cpp  vertexlist_tests.cpp
tests/: CMakeLists.txt  bacon_csr_tests.cpp  bacon_example.cpp  bellman_shortest_paths_tests.cpp  bfs_tests.cpp  breadth_first_search_tests.cpp  catch_main.cpp  cc_tests.cpp  co_bfs_tests.cpp  co_dijkstra_clrs_tests.cpp  co_dijkstra_tests.cpp  compressed_graph_tests.cpp  constexpr_tests.cpp  csv.hpp  csv_routes.cpp  csv_routes.hpp  csv_routes_csr_tests.cpp  csv_routes_dov_tests.cpp  csv_routes_vofl_tests.cpp  depth_first_search_tests.cpp  descriptor_dyn_tests.cpp  descriptor_old_tests.cpp  descriptor_tests.cpp  dfs_tests.cpp  dijkstra_shortest_paths_tests.cpp  dynamic_graph_tests.cpp  edgelist_tests.cpp  edgelist_view_tests.cpp  examples.cpp  examples_tests.cpp  identifier_tests.cpp  incidence_tests.cpp  map_adjacency_list_tests.cpp  mis_tests.cpp  mst_tests.cpp  namespace_validation_phase1.cpp  namespace_validation_phase2_task2_2.cpp  namespace_validation_phase3_task3_2.cpp  namespace_validation_phase6_task6_1.cpp  namespace_validation_phase6_tasks6_2_6.cpp  (+9 more)
(+11 files in other folders)
